[package]
name = "actix-started-in-drop"
version = "0.1.0"
authors = ["Masayuki Nagamachi <masnagam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-rt = "1.0"
tokio = { version = "0.2", features = ["full"] }
