[package]
name = "actix-web-illegal-chunked-encoding"
version = "0.1.0"
authors = ["masnagam <masnagam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
