[package]
name = "actix-web-streaming-and-tcp-disconnect"
version = "0.1.0"
authors = ["Masayuki Nagamachi <masnagam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
futures = "0.3"
