[package]
name = "rust-case-studies-tokio-process-hup"
version = "0.1.0"
authors = ["Masayuki Nagamachi <masnagam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
